--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/media.css">
   <script type="text/javascript" src="./js/jquery_3.5.1.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <!--[if lt IE 9]>
@@ -38,10 +39,10 @@
               <li>
                 <a href="#">o'neul</a>
                 <ul class="submenu">
+                  <!-- <li><a href="#">&nbsp;&nbsp;</a></li>
                   <li><a href="#">&nbsp;&nbsp;</a></li>
                   <li><a href="#">&nbsp;&nbsp;</a></li>
-                  <li><a href="#">&nbsp;&nbsp;</a></li>
-                  <li><a href="#">&nbsp;&nbsp;</a></li>
+                  <li><a href="#">&nbsp;&nbsp;</a></li> -->
                 </ul>
               </li>
               <li>
@@ -56,10 +57,10 @@
               <li>
                 <a href="#">People</a>
                 <ul class="submenu">
+                  <!-- <li><a href="#">&nbsp;&nbsp;</a></li>
                   <li><a href="#">&nbsp;&nbsp;</a></li>
                   <li><a href="#">&nbsp;&nbsp;</a></li>
-                  <li><a href="#">&nbsp;&nbsp;</a></li>
-                  <li><a href="#">&nbsp;&nbsp;</a></li>
+                  <li><a href="#">&nbsp;&nbsp;</a></li> -->
                 </ul>
               </li>
               <li>
@@ -73,19 +74,19 @@
               </li><li>
                 <a href="#">Social</a>
                 <ul class="submenu">
+                  <!-- <li><a href="#">&nbsp;&nbsp;</a></li>
                   <li><a href="#">&nbsp;&nbsp;</a></li>
                   <li><a href="#">&nbsp;&nbsp;</a></li>
-                  <li><a href="#">&nbsp;&nbsp;</a></li>
-                  <li><a href="#">&nbsp;&nbsp;</a></li>
+                  <li><a href="#">&nbsp;&nbsp;</a></li> -->
                 </ul>
               </li>
               <li>
                 <a href="#">Reservation</a>
                 <ul class="submenu">
+                  <!-- <li><a href="#">&nbsp;&nbsp;</a></li>
                   <li><a href="#">&nbsp;&nbsp;</a></li>
                   <li><a href="#">&nbsp;&nbsp;</a></li>
-                  <li><a href="#">&nbsp;&nbsp;</a></li>
-                  <li><a href="#">&nbsp;&nbsp;</a></li>
+                  <li><a href="#">&nbsp;&nbsp;</a></li> -->
                 </ul>
               </li>
             </ul>
