--- a/index.html
+++ b/index.html
@@ -481,14 +481,12 @@
       </div>
       <div class="footer-info">
         <p class="f-txt1">
-          "레스토랑 오늘은 한식문화의 가치를 연구하고 특별한 경험을 소개하기 위해 "
-          <br>
-          "행복에프앤씨대잔에서 운영하는 한식 다이닝 레스토랑입니다."
-        </p>
+          "레스토랑 오늘은 한식문화의 가치를 연구하고<br> 특별한 경험을 소개하기 위해
+          행복에프앤씨재단에서 운영하는 <br> 한식 다이닝 레스토랑입니다."
+        </p><br>
         <p class="f-txt2">
-          "O’neul is a Korean dining restaurant operated by Happy F&C Foundation that strives to"
-          <br>
-          "research true values of Korean food culture and spread its unique and special experience."
+          "O’neul is a Korean dining restaurant operated<br>by Happy F&C Foundation that strives to
+          research true values of<br>Korean food culture and spread its unique and special experience."
         </p>
         <p class="copyright mt-20">
           Copyright © 2020 The Happiness food and culture foundation all right reserved.
