인스타 삭제 및 이니셜 링크 적용

--- a/index - 복사본.html
+++ b/index - 복사본.html
@@ -5,7 +5,7 @@
   <title>이윤정 레스토랑 오늘 포트폴리오</title>
   <meta name="description" content="레스토랑 오늘">
   <meta name="viewport" content="width=device-width, initial-scale=1, maixmum-scale=1">
-  <link rel="stylesheet" href="./css/myinitial.css">
+  <link rel="stylesheet" href="./css/initial.css">
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
@@ -72,15 +72,15 @@
                   <li><a href="#">Wedding/Party</a></li>
                 </ul>
               </li>
-              <!-- <li>
+              <li>
                 <a href="#">Social</a>
                 <ul class="submenu">
+                  <!-- <li><a href="#">&nbsp;&nbsp;</a></li>
                   <li><a href="#">&nbsp;&nbsp;</a></li>
                   <li><a href="#">&nbsp;&nbsp;</a></li>
-                  <li><a href="#">&nbsp;&nbsp;</a></li>
-                  <li><a href="#">&nbsp;&nbsp;</a></li>
+                  <li><a href="#">&nbsp;&nbsp;</a></li> -->
                 </ul>
-              </li> -->
+              </li>
               <li>
                 <a href="#">Reservation</a>
                 <ul class="submenu">
@@ -368,7 +368,7 @@
             </script>
           </div>
         </section>
-        <!-- <section id="five" data-aos="fade-up" data-aos-duration="3000">
+        <section id="five" data-aos="fade-up" data-aos-duration="3000">
           <div class="main-insta">
             <div class="insta-wrap">
               <div class="instaimg">
@@ -429,7 +429,7 @@
               </div>
             </div>
           </div>
-        </section> -->
+        </section>
         <section id="six" data-aos="fade-up" data-aos-duration="3000">
           <div class="info-wrap">
             <div class="info-img">
