--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
   <meta charset="UTF-8">
   <title>이윤정 레스토랑 오늘 포트폴리오</title>
   <meta name="description" content="레스토랑 오늘">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maixmum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/myinitial.css">
   <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+  <link rel="stylesheet" href="./css/swiper.min.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/media.css">
   <script type="text/javascript" src="./js/jquery_3.5.1.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+  <script type="text/javascript" src="./js/swiper.min.js"></script>
+  <script type="text/javascript" src="./js/common.js"></script>
   <!--[if lt IE 9]>
   <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -101,10 +102,10 @@
             <div class="maintext">
               <h1 class="mvi-tit fs-96 m-fs-86 mtg-font mb-20 pt-50">Restaurant o'neul</h1>
               <p class="fs-22 m-fs-26">
-                "레스토랑 오늘이 맛과 건강을 추구하는 자연이랑과 함께 선보이는 셰프메이드 가정식 브랜드"
+                "레스토랑 오늘이 맛과 건강을 추구하는 <br class="pc">자연이랑과 함께 선보이는 셰프메이드 가정식 브랜드"
               </p>
               <p class="fs-18 m-fs-22 mt-10 mts-font">
-                "A premium home-meal brand made by ‘restaurant o’neul’ and ‘with nature’"
+                "A premium home-meal brand made by <br class="pc">‘restaurant o’neul’ and ‘with nature’"
               </p>
            </div>
          </div>
@@ -112,10 +113,10 @@
            <div class="maintext">
              <h1 class="mvi-tit fs-96 m-fs-86 mtg-font mb-20 pt-50">Restaurant o'neul</h1>
              <p class="fs-22 m-fs-26">
-               "가장 풍요롭고 생생한 시간, 오늘을 주제로 한 전통 한식 다이닝"
+               "가장 풍요롭고 생생한 시간, <br class="pc">오늘을 주제로 한 전통 한식 다이닝"
              </p>
              <p class="fs-18 m-fs-22 mt-10 mts-font">
-               "Restaurant o’neul is a Korean dining inspired  by the most fulfilling and vivid time, ‘today’."
+               "Restaurant o’neul is a Korean dining inspired<br class="pc"> by the most fulfilling and vivid time, ‘today’."
              </p>
           </div>
         </div>
@@ -123,10 +124,10 @@
           <div class="maintext">
             <h1 class="mvi-tit fs-96 m-fs-86 mtg-font mb-20 pt-50">Restaurant o'neul</h1>
             <p class="fs-22 m-fs-26">
-              "가장 풍요롭고 생생한 시간, 오늘을 주제로 한 전통 한식 다이닝"
+              "가장 풍요롭고 생생한 시간, <br class="pc">오늘을 주제로 한 전통 한식 다이닝"
             </p>
             <p class="fs-18 m-fs-22 mt-10 mts-font">
-              "Restaurant o’neul is a Korean dining inspired  by the most fulfilling and vivid time, ‘today’."
+              "Restaurant o’neul is a Korean dining inspired<br class="pc"> by the most fulfilling and vivid time, ‘today’."
             </p>
          </div>
        </div>
@@ -134,10 +135,10 @@
          <div class="maintext">
            <h1 class="mvi-tit fs-96 m-fs-86 mtg-font mb-20 pt-50">Restaurant o'neul</h1>
            <p class="fs-22 m-fs-26">
-             "가장 풍요롭고 생생한 시간, 오늘을 주제로 한 전통 한식 다이닝"
+             "가장 풍요롭고 생생한 시간, <br class="pc">오늘을 주제로 한 전통 한식 다이닝"
            </p>
            <p class="fs-18 m-fs-22 mt-10 mts-font">
-             "Restaurant o’neul is a Korean dining inspired  by the most fulfilling and vivid time, ‘today’."
+             "Restaurant o’neul is a Korean dining inspired<br class="pc"> by the most fulfilling and vivid time, ‘today’."
            </p>
           </div>
          </div>
@@ -145,10 +146,10 @@
            <div class="maintext">
              <h1 class="mvi-tit fs-96 m-fs-86 mtg-font mb-20 pt-50">Restaurant o'neul</h1>
              <p class="fs-22 m-fs-26">
-               "가장 풍요롭고 생생한 시간, 오늘을 주제로 한 전통 한식 다이닝"
+               "가장 풍요롭고 생생한 시간, <br class="pc">오늘을 주제로 한 전통 한식 다이닝"
              </p>
              <p class="fs-18 m-fs-22 mt-10 mts-font">
-               "Restaurant o’neul is a Korean dining inspired  by the most fulfilling and vivid time, ‘today’."
+               "Restaurant o’neul is a Korean dining inspired<br class="pc"> by the most fulfilling and vivid time, ‘today’."
              </p>
           </div>
         </div>
@@ -158,25 +159,6 @@
         <div class="swiper-pagination"></div>
       </div>
     </div>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-      <script>
-      var swiper = new Swiper(".firstSwiper", {
-        spaceBetween: 30,
-        centeredSlides: true,
-        autoplay: {
-          delay: 2500,
-          disableOnInteraction: false,
-        },
-        pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-        },
-        navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
-        },
-      });
-    </script>
       <div id="content">
         <section id="first" data-aos="fade-up" data-aos-duration="3000">
           <div class="first-sec">
@@ -308,7 +290,7 @@
             <h2 class="mtg-font fs-60 m-fs-68 1h-10">o'neul Room</h2>
           </div>
           <div class="main-room">
-            <div class="swiper-container mySwiper">
+            <div class="swiper-container secondSwiper">
              <div class="swiper-wrapper">
                <div class="swiper-slide">
                  <h3 class="fw-200 fs-22">1F<br>
@@ -347,25 +329,6 @@
              <div class="swiper-button-prev"></div>
              <div class="swiper-pagination"></div>
            </div>
-
-           <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-           <script>
-              var swiper = new Swiper(".mySwiper", {
-                slidesPerView: 3,
-                spaceBetween: 30,
-                slidesPerGroup: 3,
-                loop: true,
-                loopFillGroupWithBlank: true,
-                pagination: {
-                  el: ".swiper-pagination",
-                  clickable: true,
-                },
-                navigation: {
-                  nextEl: ".swiper-button-next",
-                  prevEl: ".swiper-button-prev",
-                },
-              });
-            </script>
           </div>
         </section>
         <!-- <section id="five" data-aos="fade-up" data-aos-duration="3000">
@@ -480,14 +443,17 @@
       <div class="footimg">
         <img src="./img/logo_f.png" alt="">
       </div>
+      <div class="mobile-foot-logo">
+        <img src="./img/logo_on.png" alt="">
+      </div>
       <div class="footer-info">
         <p class="f-txt1">
-          "레스토랑 오늘은 한식문화의 가치를 연구하고<br> 특별한 경험을 소개하기 위해
-          행복에프앤씨재단에서 운영하는 <br> 한식 다이닝 레스토랑입니다."
+          "레스토랑 오늘은 한식문화의 가치를 연구하고<br class="mobile"> 특별한 경험을 소개하기 위해
+          행복에프앤씨재단에서 운영하는 <br class="mobile"> 한식 다이닝 레스토랑입니다."
         </p><br>
         <p class="f-txt2">
-          "O’neul is a Korean dining restaurant operated<br>by Happy F&C Foundation that strives to
-          research true values of<br>Korean food culture and spread its unique and special experience."
+          "O’neul is a Korean dining restaurant operated<br class="mobile">by Happy F&C Foundation that strives to
+          research true values of<br class="mobile">Korean food culture and spread its unique and special experience."
         </p>
         <p class="copyright mt-20">
           Copyright © 2020 The Happiness food and culture foundation all right reserved.
