미디어쿼리 수정

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             <div class="info-img">
               <img src="./img/mi_bg.jpg" alt="img">
             </div>
-            <div class="info-text">
+            <div class="info-alltext">
               <p class="fw-400">레스토랑 오늘</p>
               <p class="fs-50 m-fs-60 mtg-font text-color-01">Restaurant o'neul</p>
               <p class="fs-22 m-fs-28 fw-400 mt-15">"04393 서울시 용산구 장문로 60(동빙고동 1-54)"<br>
@@ -419,11 +419,11 @@
                 <img src="./img/icon_time.png" alt="">
                 <div class="info-text">
                   <span class="mtg-font fs-22 m-fs-28 text-color-01">Luncheon</span>
-                  " : 12:00 ~ 15:00"<br>
+                  <span>" : 12:00 ~ 15:00"<br></span>
                   <span class="mtg-font fs-22 m-fs-28 text-color-01">Dinner</span>
-                  " : 18:00 ~ 22:00"<br>
+                  <span>" : 18:00 ~ 22:00"<br></span>
                   <span class="mtg-font fs-22 m-fs-28 text-color-01">Last order</span>
-                  " : 20:00"
+                  <span>" : 20:00"</span>
                   <br><br>
                   <span>(일요일 휴무, Closed on Sunday)</span>
                 </div>
