메뉴, 룸 추가

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>이윤정 레스토랑 오늘 포트폴리오</title>
   <meta name="description" content="레스토랑 오늘">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <link rel="stylesheet" href="./css/myinitial.css">
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/swiper.min.css">
@@ -47,7 +47,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#">Menu</a>
+                <a href="menu.html">Menu</a>
                 <ul class="submenu">
                   <li><a href="#">Luncheon</a></li>
                   <li><a href="#">Dinner</a></li>
@@ -65,7 +65,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#">Room</a>
+                <a href="roon.html">Room</a>
                 <ul class="submenu">
                   <li><a href="#">Reception</a></li>
                   <li><a href="#">Private Room</a></li>
