--- a/menu.html
+++ b/menu.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>TITLE</title>
+<title>이윤정 레스토랑 오늘 서브 메뉴 페이지</title>
 <meta name="description" content="레스토랑 오늘">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./css/myinitial.css">
-<link rel="stylesheet" href="./css/common.css">
 <link rel="stylesheet" href="./css/swiper.min.css">
 <link rel="stylesheet" href="./css/menustyle.css">
 <link rel="stylesheet" href="./css/menumedia.css">
@@ -14,7 +13,6 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <script type="text/javascript" src="./js/swiper.min.js"></script>
 <script type="text/javascript" src="./js/common.js"></script>
-<script type="text/javascript" src="./js/tab.js"></script>
 
 
 <!--[if lt IE 9]>
@@ -98,87 +96,201 @@
         </div>
       </div>
     </div>
-  </div>
   <div id="mainbg">
     <div class="main-bg">
       <div class="main-text">
-        <p class="fs-16">Restaurant o'neul</p>
-        <p class="fs-60">o'neul Menu</p>
+        <p class="fs-16 Montserrat-font .letter">Restaurant o'neul</p>
+        <p class="fs-60 montaga-font">o'neul Menu</p>
       </div>
     </div>
   </div>
-    <div id="manu-nav">
-      <div class="manu-wrap">
-        <ul id="tabs">
-          <div class="mobile=menu">
-          <li><a href="#" title="tab1">Luncheon</a></li>
-          <li><a href="#" title="tab2">Dinner</a></li>
+  <div id="content">
+    <div id="sub-menu">
+    <aside id="main-aside">
+      <input type="radio" id="first" name="tab">
+      <input type="radio" id="second" name="tab">
+      <input type="radio" id="third" name="tab" checked>
+      <input type="radio" id="fourth" name="tab">
+      <div class="button-wrap">
+        <section class="buttons">
+          <label for="first" class="Montserrat-font fs-22 lun">Luncheon</label>
+          <label for="second" class="Montserrat-font fs-22">Dinner</label>
+          <label for="third" class="Montserrat-font fs-22">Wedding / Party</label>
+          <label for="fourth" class="Montserrat-font fs-22 wine">Signature wine</label>
+        </section>
+      </div>
+      <div class="tab-item">
+        <div class="tab-title">
+          <h2 class="fs-22 Noto-font">2021 봄메뉴는 봄 그리고 발효를 주제로<br>식문화 연구를 통해 레스토랑 오늘만의 차별화된 메뉴로 구성하여 제공합니다.</h2>
+        </div>
+        <div class="lun-menu">
+          <div class="lun-img">
+            <img src="./img/menu/lunch.jpg" alt="런치 사진1">
           </div>
-          <div class="mobile=menu2">
-          <li><a href="#" title="tab3">Wedding / Party</a></li>
-          <li><a href="#" title="tab4">Signature wine</a></li>
+          <div class="lun-text">
+            <p class="montaga-font fs-22">Luncheon</p>
+            <h2 class="fs-34">봄 오찬</h2>
+            <p class="fs-20">65,000 KRW</p>
+            <ul>
+            <li class="fs-22"><a href="#">오늘의 죽</a></li>
+            <li class="fs-22"><a href="#">문어 · 참소라 · 한치 초무침</a></li>
+            <li class="fs-22"><a href="#">봄 야채 해물 전</a></li>
+            <li class="fs-22"><a href="#">쇠고기 모둠 수육과 황태채 무침</a></li>
+            <li class="fs-22"><a href="#">o'neul의 계절 반상</a></li>
+            <li class="fs-22"><a href="#">전통 병과와 아이스크림</a></li>
+            <li class="fs-22"><a href="#">커피 또는 차</a></li>
+            </ul>
           </div>
-        </ul>
-        <div id="content">
-          <div id="tab1">
-            <div id="tab1 tab-info">
-              <p>2021 봄메뉴 봄 그리고 발효를 주제로<br>식문화 연구를 통해 레스토랑 오늘만의 차별화된 메뉴로 구성하여 제공합니다.</p>
-            </div>
-            <div id="tab1 tab1-img">
-              <img src="" alt="">
-            </div>
-            <div id="tab1 tab1-text">
-              <span>Luncheon</span>
-              <p>봄 오찬</p>
-              <span>65,000 KRW</span>
-            </div>
+        </div>
+        <div class="lun-menu2">
+          <div class="lun-img">
+            <img src="./img/menu/lunch2.jpg" alt="런치 사진2">
           </div>
-          <div id="tab2">
-            <div id="tab2 tab-info">
-              <p>2021 봄메뉴 봄 그리고 발효를 주제로<br>식문화 연구를 통해 레스토랑 오늘만의 차별화된 메뉴로 구성하여 제공합니다.</p>
-            </div>
-            <div id="tab2 tab1-img">
-              <img src="" alt="">
-            </div>
-            <div id="tab2 tab1-text">
-              <span>Luncheon</span>
-              <p>  오찬</p>
-              <span>65,000 KRW</span>
-            </div>
+          <div class="lun-text">
+            <p class="montaga-font fs-22">Luncheon</p>
+            <h2 class="fs-34">오늘 오찬</h2>
+            <p class="fs-20">78,000 KRW</p>
+            <ul>
+            <li class="fs-22"><a href="#">오늘의 죽</a></li>
+            <li class="fs-22"><a href="#">봄 순 겨자채</a></li>
+            <li class="fs-22"><a href="#">갈비 육전과 봄 순 무침</a></li>
+            <li class="fs-22"><a href="#">참돔 어만두탕</a></li>
+            <li class="fs-22"><a href="#">된장 메로구이와 떡갈비, 감태지</a></li>
+            <li class="fs-22"><a href="#">o'neul의 계절 반상</a></li>
+            <li class="fs-22"><a href="#">전통 병과와 아이스크림</a></li>
+            <li class="fs-22"><a href="#">커피 또는 차</a></li>
+           </ul>
           </div>
-          <div id="tab3">
-            <div id="tab3 tab-info">
-              <p>2021 봄메뉴 봄 그리고 발효를 주제로<br>식문화 연구를 통해 레스토랑 오늘만의 차별화된 메뉴로 구성하여 제공합니다.</p>
-            </div>
-            <div id="tab3 tab1-img">
-              <img src="" alt="">
-            </div>
-            <div id="tab3 tab1-text">
-              <span>Luncheon</span>
-              <p>ㅁ오찬</p>
-              <span>65,000 KRW</span>
-            </div>
+        </div>
+        <div class="lun-info">
+          <div class="lun-icon">
+            <img src="./img/menu/icon_quotes.png" alt="아이콘">
           </div>
-          <div id="tab4">
-            <!-- <div id="tab4 tab-info"> -->
-              <p>2021 봄메뉴 봄 그리고 발효를 주제로<br>식문화 연구를 통해 레스토랑 오늘만의 차별화된 메뉴로 구성하여 제공합니다.</p>
-            <!-- </div> -->
-            <div id="tab4 tab1-img">
-              <img src="" alt="">
+          <div class="lun-info-text">
+            <p class="fs-24">레스토랑 오늘에서 선보이는 우리 음식은 정통성에 기반을 두고있으며<br class="mobile">엄선한 식자재에 현대적인 조리법을 가미해 우리 음식의 본질에 더욱 충실하고자 합니다.</p>
+            <p class="fs-18">The culinary identity of restaurant o’neul is  based on tradition, local ingredients and  traditional cooking methods.<br class="mobile">We strive to be innovative and respect the essence of tradition at the same time.</p>
+          </div>
+        </div>
+        <div class="lun-info2">
+          <div class="lunch-info2">
+            <div class="season">
+              <p class="montaga-font fs-22">Seasonal dining menu</p>
+              <h3 class="fs-34">시즈널 다이닝 메뉴</h3>
             </div>
-            <div id="tab4 tab1-text">
-              <span>Luncheon</span>
-              <p>ㅂ 오찬</p>
-              <span>65,000 KRW</span>
-            </div>
+            <ul>
+              <li class="fs-18"><a href="">특정 음식에 대해 알러지가 있으시거나 메뉴조정을 원하시면 레스토랑 오늘로 연락 해주세요.</a></li>
+              <li class="fs-18"><a href="">코스 메뉴의 식재료 변경을 희망하시면 말씀주세요. (예. 육류↔어류)</a></li>
+              <li class="fs-18"><a href="">4인 이상 예약시 고객맞춤메뉴 제공 가능합니다. (최소 3일전까지 사전협의 시)</a></li>
+              <p class="fs-16">Kindly advise us detailed information about food allergies or<br class="mobile">special requests in advance. Price include tax and service charge.</p>
+            </ul>
           </div>
         </div>
       </div>
-    </div>
+      <div class="tab-item">
+        <div class="tab-title">
+          <h2 class="fs-22 Noto-font">2021 봄메뉴는 봄 그리고 발효를 주제로<br>식문화 연구를 통해 레스토랑 오늘만의 차별화된 메뉴로 구성하여 제공합니다.</h2>
+        </div>
+        <div class="dinner-menu">
+          <div class="dinner-img">
+            <img src="./img/menu/dinner01.jpg" alt="dinner 사진1">
+          </div>
+          <div class="dinner-text">
+            <p class="montaga-font fs-22">Dinner</p>
+            <h2 class="fs-34">오늘 봄 한상</h2>
+            <p class="fs-20">150,000 KRW</p>
+            <ul class="dinner-menutxt">
+              <li class="fs-24"><span>맞이 요리 -</span></li>
+              <li class="fs-22"><a href="#">한입 거리</a></li>
+              <li class="fs-24"><span>시작 요리 -</span></li>
+              <li class="fs-22"><a href="#">오늘의 죽</a></li>
+              <li class="fs-22"><a href="#">봄 어체</a></li>
+              <li class="fs-22"><a href="#">봄 순 지짐</a></li>
+              <li class="fs-24"><span>중심요리 -</span></li>
+              <li class="fs-22"><a href="#">해물 겨자채</a></li>
+              <li class="fs-22"><a href="#">o'neul 생선</a></li>
+              <li class="fs-22"><a href="#">참돔 어만두탕</a></li>
+              <li class="fs-22"><a href="#">한우 암소 채끝살 숯불구이</a></li>
+              <li class="fs-24"><span>오늘 반상 -</span></li>
+              <li class="fs-22"><a href="#">봄 해물 솥 밥</a></li>
+              <li class="fs-24"><span>맺음 요리 -</span></li>
+              <li class="fs-22"><a href="#">다과상과 아이스크림</a></li>
+              <li class="fs-22"><a href="#">커피 또는 차</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="dinner-menu2">
+          <p class="montaga-font fs-22">Special</p>
+          <h2 class="fs-34">오늘 셰프 스페셜 한상</h2>
+          <p class="fs-20">200,000 KRW</p>
+          <p class="fs-24">오늘 셰프 스페셜 한상 메뉴는 쉽게 만나볼 수 없는 랍스터, 털게, 기름 가자미 등<br class="mobile">김준식 셰프가 각 현지에서 공수 한 해산물을 활용하며 3일 전 예약 부탁드립니다.</p>
+        </div>
+        <div class="lun-info">
+          <div class="lun-icon">
+            <img src="./img/menu/icon_quotes.png" alt="아이콘">
+          </div>
+          <div class="lun-info-text">
+            <p class="fs-24">레스토랑 오늘에서 선보이는 우리 음식은 정통성에 기반을 두고있으며<br class="mobile">엄선한 식자재에 현대적인 조리법을 가미해 우리 음식의 본질에 더욱 충실하고자 합니다.</p>
+            <p class="fs-18">The culinary identity of restaurant o’neul is  based on tradition, local ingredients and  traditional cooking methods.<br class="mobile">We strive to be innovative and respect the essence of tradition at the same time.</p>
+          </div>
+        </div>
+        <div class="lun-info2">
+          <div class="lunch-info2">
+            <div class="season">
+              <p class="montaga-font fs-22">Seasonal dining menu</p>
+              <h3 class="fs-34">시즈널 다이닝 메뉴</h3>
+            </div>
+            <ul>
+              <li class="fs-18"><a href="">특정 음식에 대해 알러지가 있으시거나 메뉴조정을 원하시면 레스토랑 오늘로 연락 해주세요.</a></li>
+              <li class="fs-18"><a href="">코스 메뉴의 식재료 변경을 희망하시면 말씀주세요. (예. 육류↔어류)</a></li>
+              <li class="fs-18"><a href="">4인 이상 예약시 고객맞춤메뉴 제공 가능합니다. (최소 3일전까지 사전협의 시)</a></li>
+              <p class="fs-16">Kindly advise us detailed information about food allergies or<br class="mobile">special requests in advance. Price include tax and service charge.</p>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="tab-item">
+
+      </div>
+      <div class="tab-item">
+
+      </div>
+    </aside>
+   </div>
   </div>
+</div>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
   AOS.init();
   </script>
 </body>
+<footer id="footer">
+  <div class="footer-wrap">
+    <div class="footimg">
+      <img src="./img/logo_f.png" alt="">
+    </div>
+    <div class="footer-info">
+      <p class="f-txt1">
+        "레스토랑 오늘은 한식문화의 가치를 연구하고<br class="mobile"> 특별한 경험을 소개하기 위해
+        행복에프앤씨재단에서 운영하는 <br class="mobile"> 한식 다이닝 레스토랑입니다."
+      </p><br>
+      <p class="f-txt2">
+        "O’neul is a Korean dining restaurant operated<br class="mobile">by Happy F&C Foundation that strives to
+        research true values of<br class="mobile">Korean food culture and spread its unique and special experience."
+      </p>
+      <p class="copyright mt-20">
+        Copyright © 2020 The Happiness food and culture foundation all right reserved.
+      </p>
+      </div>
+      <div class="footer-right">
+        <a href="http://www.i-award.or.kr/Web/" target="_blank" class="fr-a"><img src="./img/finalist.png" alt="웹어워드"></a>
+        <a href="http://www.instagram.com/oneu1_restaurant/" target="_blank" class="fr-btn"></a>
+      </div>
+      <div id="site">
+      <select id="familysite">
+        <option value="0" disabled selected hidden>Family Site</option>
+        <option value="1">행복에프엔씨재단</option>
+      </select>
+      </div>
+    </div>
+</footer>
 </html>
