--- a/menu.html
+++ b/menu.html
@@ -130,7 +130,7 @@
           <div class="lun-text">
             <p class="montaga-font fs-22">Luncheon</p>
             <h2 class="fs-34">봄 오찬</h2>
-            <p class="fs-20">65,000 KRW</p>
+            <p class="fs-20 Montserrat-font">65,000 KRW</p>
             <ul>
             <li class="fs-22"><a href="#">오늘의 죽</a></li>
             <li class="fs-22"><a href="#">문어 · 참소라 · 한치 초무침</a></li>
@@ -149,7 +149,7 @@
           <div class="lun-text">
             <p class="montaga-font fs-22">Luncheon</p>
             <h2 class="fs-34">오늘 오찬</h2>
-            <p class="fs-20">78,000 KRW</p>
+            <p class="fs-20 Montserrat-font">78,000 KRW</p>
             <ul>
             <li class="fs-22"><a href="#">오늘의 죽</a></li>
             <li class="fs-22"><a href="#">봄 순 겨자채</a></li>
@@ -197,7 +197,7 @@
           <div class="dinner-text">
             <p class="montaga-font fs-22">Dinner</p>
             <h2 class="fs-34">오늘 봄 한상</h2>
-            <p class="fs-20">150,000 KRW</p>
+            <p class="fs-20 Montserrat-font">150,000 KRW</p>
             <ul class="dinner-menutxt">
               <li class="fs-24"><span>맞이 요리 -</span></li>
               <li class="fs-22"><a href="#">한입 거리</a></li>
@@ -221,7 +221,7 @@
         <div class="dinner-menu2">
           <p class="montaga-font fs-22">Special</p>
           <h2 class="fs-34">오늘 셰프 스페셜 한상</h2>
-          <p class="fs-20">200,000 KRW</p>
+          <p class="fs-20 Montserrat-font">200,000 KRW</p>
           <p class="fs-24">오늘 셰프 스페셜 한상 메뉴는 쉽게 만나볼 수 없는 랍스터, 털게, 기름 가자미 등<br class="mobile">김준식 셰프가 각 현지에서 공수 한 해산물을 활용하며 3일 전 예약 부탁드립니다.</p>
         </div>
         <div class="lun-info">
@@ -249,7 +249,111 @@
         </div>
       </div>
       <div class="tab-item">
-
+        <div class="party">
+          <div class="party-main">
+            <div class="party-main2">
+              <div class="party-text">
+                <h2 class="fs-34">연회 메뉴</h2>
+                <p class="fs-20 Montserrat-font">130,000 KRW ~</p>
+              </div>
+              <div class="party-text2">
+                <p class="fs-22 Noto-font">20인 이상 연회 진행 시 이벤트에 맞춘 코스/뷔페/케이터링 메뉴를 제공합니다.</p>
+                <p class="fs-16 .Montserrat-font">For a banquet of over 20 guests, we offer specialized course/buffet/catering menu options.</p>
+              </div>
+              <div class="party-icon">
+                <ul>
+                  <li>
+                    <span><img src="./img/menu/icon_wine.png" alt="icon"></span>
+                    <p class="fs-20">프라이빗 비즈니스 다이닝</p>
+                  </li>
+                  <li>
+                    <span><img src="./img/menu/icon_fork.png" alt="icon"></span>
+                    <p class="fs-20">패밀리 다이닝</p>
+                  </li>
+                  <li>
+                    <span><img src="./img/menu/icon_table.png" alt="icon"></span>
+                    <p class="fs-20">소셜 다이닝</p>
+                  </li>
+                  <li>
+                    <span><img src="./img/menu/icon_mike.png" alt="icon"></span>
+                    <p class="fs-20">컨퍼런스</p>
+                  </li>
+                  <li>
+                    <span><img src="./img/menu/icon_cocktail.png" alt="icon"></span>
+                    <p class="fs-20">기업 행사</p>
+                  </li>
+                  <li>
+                    <span><img src="./img/menu/icon_noodle.png" alt="icon"></span>
+                    <p class="fs-20">런치 이벤트</p>
+                  </li>
+                  <li>
+                    <span><img src="./img/menu/icon_cap.png" alt="icon"></span>
+                    <p class="fs-20">브랜드 이벤트 런칭 파티</p>
+                  </li>
+                  <li>
+                    <span><img src="./img/menu/icon_ribbon.png" alt="icon"></span>
+                    <p class="fs-20">스몰 웨딩</p>
+                  </li>
+                  <li>
+                    <span><img src="./img/menu/icon_cake.png" alt="icon"></span>
+                    <p class="fs-20">돌잔치</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="party-info">
+            <div class="papa">
+              <div class="party1">
+                <h2 class="fs-22">연회 코스 예시 메뉴</h2>
+                <ul>
+                  <li class="fs-18">오늘의 죽, 한우육회와 낙지 탕탕이, 해물파전, 제주국수와 해산물 샐러드, 활전복찜, 진갈비 숯불구이,<br class="mobile">생대구 매운탕 전골, 다과상과 아이스크림, 차 또는 커피</li>
+                </ul>
+              </div>
+              <div class="party2">
+                <h2 class="fs-22">케이터링 예시 메뉴 </h2>
+                <ul>
+                  <li class="fs-18">찬 메뉴 : 명태만두 샐러드, 모둠 부각, 케일 쌈밥, 버섯주먹밥 , 대하 전복 잣즙</li>
+                  <li class="fs-18">따뜻한 메뉴 : 통갈비살 떡갈비와 가평잣, 대하 표고선과 장아찌 소스</li>
+                  <li class="fs-18">후식 : 곶감호두강정말이, 주악, 명인 약과, 발효찹쌀한과, 율란</li>
+                </ul>
+              </div>
+              <div class="party3">
+                <h2 class="fs-22">BBQ 예시 메뉴</h2>
+                <ul>
+                  <li class="fs-18">주안상 : 활어초무침 또는 숙회, 촉촉 계란말이, 모둠부각</li>
+                  <li class="fs-18">BBQ : 제주 흑돼지 삼겹살, 효모 숙성 닭다리살, LA갈비</li>
+                  <li class="fs-18">곁들임: 쌈야채, 구운야채, 김치, 파절이, 명이장아찌, 청량고추장아</li>
+                  <li class="fs-18">식사 : 대구 매운탕 전골</li>
+                  <li class="fs-18">후식 : 다과상과 아이스크림, 차 또는 커피</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="party-info2">
+            <div class="party-custom">
+              <p class="montaga-font fs-22">Customized Menu</p>
+              <h2 class="fs-34">맞춤 메뉴</h2>
+              <p class="fs-20 Montserrat-font">150,000 KRW ~</p>
+              <p class="fs-22">다이닝 성격에 맞게 고객 맞춤 메뉴 구성을 제안드립니다.(4인 이상)</p>
+              <p class="fs-16">For a party of over 4 guests, we offer a personalized group dining option</p>
+              <div class="custom-img">
+                <div class="custom1">
+                  <img src="./img/menu/icon_wine.png" alt="icon">
+                  <p class="fs-20">비즈니스 미팅</p>
+                </div>
+                <div class="custom1">
+                  <img src="./img/menu/icon_fork.png" alt="icon">
+                  <p class="fs-20">패밀리 다이닝</p>
+                </div>
+                <div class="custom1">
+                  <img src="./img/menu/icon_table.png" alt="icon">
+                  <p class="fs-20">소셜 다이닝</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="tab-item">
 
