--- a/menu.html
+++ b/menu.html
@@ -263,39 +263,39 @@
               <div class="party-icon">
                 <ul>
                   <li>
-                    <span><img src="./img/menu/icon_wine.png" alt="icon"></span>
+                    <div class="icon-size"><span><img src="./img/menu/icon_wine.png" alt="icon"></span></div>
                     <p class="fs-20">프라이빗 비즈니스 다이닝</p>
                   </li>
                   <li>
-                    <span><img src="./img/menu/icon_fork.png" alt="icon"></span>
+                    <div class="icon-size"><span><img src="./img/menu/icon_fork.png" alt="icon"></span></div>
                     <p class="fs-20">패밀리 다이닝</p>
                   </li>
                   <li>
-                    <span><img src="./img/menu/icon_table.png" alt="icon"></span>
+                    <div class="icon-size"><span><img src="./img/menu/icon_table.png" alt="icon"></span></div>
                     <p class="fs-20">소셜 다이닝</p>
                   </li>
                   <li>
-                    <span><img src="./img/menu/icon_mike.png" alt="icon"></span>
+                    <div class="icon-size"><span><img src="./img/menu/icon_mike.png" alt="icon"></span></div>
                     <p class="fs-20">컨퍼런스</p>
                   </li>
                   <li>
-                    <span><img src="./img/menu/icon_cocktail.png" alt="icon"></span>
+                    <div class="icon-size"><span><img src="./img/menu/icon_cocktail.png" alt="icon"></span></div>
                     <p class="fs-20">기업 행사</p>
                   </li>
                   <li>
-                    <span><img src="./img/menu/icon_noodle.png" alt="icon"></span>
+                    <div class="icon-size"><span><img src="./img/menu/icon_noodle.png" alt="icon"></span></div>
                     <p class="fs-20">런치 이벤트</p>
                   </li>
                   <li>
-                    <span><img src="./img/menu/icon_cap.png" alt="icon"></span>
+                    <div class="icon-size"><span><img src="./img/menu/icon_cap.png" alt="icon"></span></div>
                     <p class="fs-20">브랜드 이벤트 런칭 파티</p>
                   </li>
                   <li>
-                    <span><img src="./img/menu/icon_ribbon.png" alt="icon"></span>
+                    <div class="icon-size"><span><img src="./img/menu/icon_ribbon.png" alt="icon"></span></div>
                     <p class="fs-20">스몰 웨딩</p>
                   </li>
                   <li>
-                    <span><img src="./img/menu/icon_cake.png" alt="icon"></span>
+                    <div class="icon-size"><span><img src="./img/menu/icon_cake.png" alt="icon"></span></div>
                     <p class="fs-20">돌잔치</p>
                   </li>
                 </ul>
@@ -335,19 +335,19 @@
               <p class="montaga-font fs-22">Customized Menu</p>
               <h2 class="fs-34">맞춤 메뉴</h2>
               <p class="fs-20 Montserrat-font">150,000 KRW ~</p>
-              <p class="fs-22">다이닝 성격에 맞게 고객 맞춤 메뉴 구성을 제안드립니다.(4인 이상)</p>
-              <p class="fs-16">For a party of over 4 guests, we offer a personalized group dining option</p>
+              <p class="fs-22 Noto-font">다이닝 성격에 맞게 고객 맞춤 메뉴 구성을 제안드립니다.(4인 이상)</p>
+              <p class="fs-16 ">For a party of over 4 guests, we offer a personalized group dining option</p>
               <div class="custom-img">
                 <div class="custom1">
-                  <img src="./img/menu/icon_wine.png" alt="icon">
+                  <div class="icon-size"><img src="./img/menu/icon_wine.png" alt="icon"></div>
                   <p class="fs-20">비즈니스 미팅</p>
                 </div>
                 <div class="custom1">
-                  <img src="./img/menu/icon_fork.png" alt="icon">
+                  <div class="icon-size"><img src="./img/menu/icon_fork.png" alt="icon"></div>
                   <p class="fs-20">패밀리 다이닝</p>
                 </div>
                 <div class="custom1">
-                  <img src="./img/menu/icon_table.png" alt="icon">
+                  <div class="icon-size"><img src="./img/menu/icon_table.png" alt="icon"></div>
                   <p class="fs-20">소셜 다이닝</p>
                 </div>
               </div>
