--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <label for="gnbcheck" id="mobile_close_btn"></label>
             <ul class="mainmenu">
               <li>
-                <a href="#">o'neul</a>
+                <a href="#first">o'neul</a>
                 <ul class="submenu">
                   <!-- <li><a href="#">&nbsp;&nbsp;</a></li>
                   <li><a href="#">&nbsp;&nbsp;</a></li>
@@ -55,7 +55,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#">People</a>
+                <a href="#third">People</a>
                 <ul class="submenu">
                   <!-- <li><a href="#">&nbsp;&nbsp;</a></li>
                   <li><a href="#">&nbsp;&nbsp;</a></li>
@@ -64,7 +64,7 @@
                 </ul>
               </li>
               <li>
-                <a href="roon.html">Room</a>
+                <a href="room.html">Room</a>
                 <ul class="submenu">
                   <li><a href="#">Reception</a></li>
                   <li><a href="#">Private Room</a></li>
@@ -82,7 +82,7 @@
                 </ul>
               </li> -->
               <li>
-                <a href="#">Reservation</a>
+                <a href="#six">Reservation</a>
                 <ul class="submenu">
                   <!-- <li><a href="#">&nbsp;&nbsp;</a></li>
                   <li><a href="#">&nbsp;&nbsp;</a></li>
