--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>이윤정 레스토랑 오늘 포트폴리오</title>
   <meta name="description" content="레스토랑 오늘">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-  <link rel="stylesheet" href="./css/myinitial.css">
   <link rel="stylesheet" href="./css/swiper.min.css">
+  <link rel="stylesheet" href="./css/myinitial.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/media.css">
   <script type="text/javascript" src="./js/jquery_3.5.1.js"></script>
@@ -37,7 +37,7 @@
             <label for="gnbcheck" id="mobile_close_btn"></label>
             <ul class="mainmenu">
               <li>
-                <a href="#first">o'neul</a>
+                <a href="#first-mv">o'neul</a>
                 <ul class="submenu">
                   <!-- <li><a href="#">&nbsp;&nbsp;</a></li>
                   <li><a href="#">&nbsp;&nbsp;</a></li>
@@ -48,10 +48,10 @@
               <li>
                 <a href="menu.html">Menu</a>
                 <ul class="submenu">
-                  <li><a href="#">Luncheon</a></li>
-                  <li><a href="#">Dinner</a></li>
-                  <li><a href="#">Wedding/Party</a></li>
-                  <li><a href="#">Signature wine</a></li>
+                  <li><a href="menu.html">Luncheon</a></li>
+                  <li><a href="menu.html">Dinner</a></li>
+                  <li><a href="menu.html">Wedding/Party</a></li>
+                  <li><a href="menu.html">Signature wine</a></li>
                 </ul>
               </li>
               <li>
@@ -160,6 +160,7 @@
     </div>
       <div id="content">
         <section id="first" data-aos="fade-up" data-aos-duration="3000">
+          <a id="first-mv"></a>
           <div class="first-sec">
             <div class="first-info">
               <p class="fs-16 m-fs-24 text-color-01 fw-400">Restaurant o'neul</p>
