--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>이윤정 레스토랑 오늘 서브 메뉴 페이지</title>
-<meta name="description" content="레스토랑 오늘">
+<meta name="description" content="레스토랑 오늘 menu">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./css/myinitial.css">
 <link rel="stylesheet" href="./css/swiper.min.css">
