스크립트 부분

--- a/room.html
+++ b/room.html
@@ -12,7 +12,7 @@
 <script type="text/javascript" src="./js/jquery_3.5.1.js"></script>
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <script type="text/javascript" src="./js/swiper.min.js"></script>
-<!-- <script type="text/javascript" src="./js/room.js"></script> -->
+<script type="text/javascript" defer src="./js/room.js"></script>
 
 <!--[if lt IE 9]>
 <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -148,7 +148,7 @@
             </div>
           </div>
         </div>
-        <script type="text/javascript">
+        <!-- <script type="text/javascript">
         $(function(){
           let roomSwiper = new Swiper(".firstSwiper", {
             slidesPerView: 1,
@@ -170,7 +170,7 @@
             },
           });
         })
-        </script>
+        </script> -->
         <div class="tab_item">
           <div class="room2">
             <div class="f1">
@@ -204,9 +204,9 @@
             </div>
           </div>
         </div>
-        <script type="text/javascript">
+        <!-- <script type="text/javascript">
         $(function(){
-          let roomSwiper = new Swiper(".secondSwiper", {
+          let secondSwiper = new Swiper(".secondSwiper", {
             slidesPerView: 1,
             spaceBetween: 30,
             observeParents: true,
@@ -226,7 +226,7 @@
             },
           });
         })
-        </script>
+        </script> -->
         <div class="tab_item">
           <div class="room3">
             <div class="f1">
@@ -266,9 +266,9 @@
             </div>
           </div>
         </div>
-        <script type="text/javascript">
+        <!-- <script type="text/javascript">
         $(function(){
-          let roomSwiper = new Swiper(".thirdSwiper", {
+          let thirdSwiper = new Swiper(".thirdSwiper", {
             slidesPerView: 1,
             spaceBetween: 30,
             observeParents: true,
@@ -288,7 +288,7 @@
             },
           });
         })
-        </script>
+        </script> -->
         <div class="tab_item">
           <div class="room4">
             <div class="f1">
@@ -363,9 +363,9 @@
             </div>
           </div>
         </div>
-        <script type="text/javascript">
+        <!-- <script type="text/javascript">
         $(function(){
-          let roomSwiper = new Swiper(".fourthSwiper", {
+          let fourthSwiper = new Swiper(".fourthSwiper", {
             slidesPerView: 1,
             spaceBetween: 30,
             observeParents: true,
@@ -385,7 +385,7 @@
             },
           });
         })
-        </script>
+        </script> -->
       </aside>
      </div>
     </div>
